Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124174

WebEngine regression from 6.6.2 to 6.6.3

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.6
    • 6.6.3
    • WebEngine
    • None
    • Linux/Wayland
    • 7970f02aa (tqtc/lts-6.5)

      Kmail freezes on nvidia+wayland after upgrading qt to 6.6.3. I do not have any symbols. The arch debuginfod servers don't work for me at the moment. Setting `QTWEBENGINE_CHROMIUM_FLAGS="--disable-gpu" as webengine env fixes it.

       

      This is not specific to Kmail because Zeal docs also freezes the same way https://github.com/zealdocs/zeal/issues/1574

       

      Logs with QT_LOGGING_RULES="qt.webenginecontext.debug=true" QTWEBENGINE_CHROMIUM_FLAGS="--disable-sandbox --enable-logging --log-level=0 --v=100"


      zeal.core.applicationsingleton: Singleton ID: ILDx1MvWryF_8MlNlIinj1Bp7wepWErevkPkdK7z8Z0
      zeal.core.applicationsingleton: Starting as a primary instance. (PID: 22100)
      qt.webenginecontext: 

      Chromium GL Backend: egl
      Surface Type: OpenGLES
      Surface Profile: NoProfile
      Surface Version: 3.2
      QSG RHI Backend: OpenGL
      Using Supported QSG Backend: yes
      Using Software Dynamic GL: no
      Using Shared GL: yes
      Using Multithreaded OpenGL: no

      Init Parameters:
        *  application-name Zeal 
        *  browser-subprocess-path /usr/lib/qt6/QtWebEngineProcess 
        *  disable-blink-features EyeDropperAPI 
        *  disable-features ConsolidatedMovementXY,InstalledApp,EyeDropper,BackgroundFetch,WebOTP,WebPayments,WebUSB 
        *  disable-sandbox  
        *  disable-setuid-sandbox  
        *  disable-speech-api  
        *  enable-features NetworkServiceInProcess2,TracingServiceInProcess 
        *  enable-logging  
        *  enable-threaded-compositing  
        *  in-process-gpu  
        *  log-level 0 
        *  use-gl egl 
        *  v 100 

      [22108:22108:0408/160733.198478:INFO:cpu_info.cc(53)] Available number of cores: 12
      [22108:22108:0408/160733.198820:VERBOSE1:zygote_main_linux.cc(221)] ZygoteMain: initializing 0 fork delegates
      [1:1:0408/160733.199799:INFO:cpu_info.cc(53)] Available number of cores: 12
      [1:1:0408/160733.200188:VERBOSE1:zygote_main_linux.cc(221)] ZygoteMain: initializing 0 fork delegates
      [22100:22100:0408/160733.214608:WARNING:ozone_platform_qt.cpp(219)] Failed to load keymap file, falling back to StubKeyboardLayoutEngine
      [22100:22100:0408/160733.216560:VERBOSE1:webrtc_internals.cc(127)] Could not get the download directory.
      [22100:22115:0408/160733.216737:VERBOSE1:media_stream_manager.cc(1584)] MSM::InitializeMaybeAsync([this=0x5d7f68fa96f0])
      [22100:22115:0408/160733.216768:VERBOSE1:media_stream_manager.cc(1584)] MDM::MediaDevicesManager()
      [22100:22115:0408/160733.216778:VERBOSE1:media_stream_manager.cc(1584)] MSM::MediaStreamManager([this=0x5d7f68fa96f0]))
      [22100:22100:0408/160733.219803:VERBOSE1:first_party_sets_handler_impl.cc(240)] Empty path. Failed initializing First-Party Sets database.
      [22146:1:0408/160733.357303:VERBOSE1:sandbox_linux.cc(78)] Activated seccomp-bpf sandbox for process type: renderer.
      [22100:22100:0408/160733.438991:VERBOSE1:gpu_init.cc(1019)] Vulkan disabled or failed to initialize
      [22100:22115:0408/160733.468083:VERBOSE1:media_stream_manager.cc(1584)] RFAOSF::Core() [process_id=3, frame_id=1]
      [22100:22114:0408/160733.500023:VERBOSE2:address_tracker_linux.cc(437)] Ignoring RTM_NEWLINK message

        For Gerrit Dashboard: QTBUG-124174
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            nishanthkarthik Karthik Nishanth
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes