Disable single threaded mode

It deadlocks on startup and qtwayland enabled it for NVidia, which breaks us.

Fixes: QTBUG-124174
Change-Id: Ia87b8c9794c08f99500f21d0fcaeddf19ee08d50
Reviewed-by: Michael Brüning <michael.bruning@qt.io>